force-app/main/default/objects/Slack_Channel__c/Slack_Channel__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Slack Channel ID Mappings</description>
    <label>Slack Channel</label>
</CustomObject>