force-app/main/default/objects/Slack_Channel__c/fields/accounting_deals_termsheets__c.field-meta.xml
<CustomField>
    <fullName>accounting_deals_termsheets__c</fullName>
    <label>accounting-deals-termsheets</label>
    <length>11</length>
    <type>Text</type>
</CustomField>