force-app/main/default/objects/Slack_Channel__c/fields/ar_revenue_closed_won_deals__c.field-meta.xml
<CustomField>
    <fullName>ar_revenue_closed_won_deals__c</fullName>
    <label>ar-revenue-closed-won-deals</label>
    <length>11</length>
    <type>Text</type>
</CustomField>