force-app/main/default/objects/Slack_Channel__c/fields/biz_account_applications__c.field-meta.xml
<CustomField>
    <fullName>biz_account_applications__c</fullName>
    <label>biz-account-applications</label>
    <length>11</length>
    <type>Text</type>
</CustomField>