force-app/main/default/objects/Slack_Channel__c/fields/business_offboarding_cases__c.field-meta.xml
<CustomField>
    <fullName>business_offboarding_cases__c</fullName>
    <label>business-offboarding-cases</label>
    <length>11</length>
    <type>Text</type>
</CustomField>