force-app/main/default/objects/Slack_Channel__c/fields/circle_mint_referrals__c.field-meta.xml
<CustomField>
    <fullName>circle_mint_referrals__c</fullName>
    <label>circle-mint-referrals</label>
    <length>11</length>
    <type>Text</type>
</CustomField>