force-app/main/default/objects/Slack_Channel__c/fields/circlesg_newcustomernotification__c.field-meta.xml
<CustomField>
    <fullName>circlesg_newcustomernotification__c</fullName>
    <label>circlesg-newcustomernotification</label>
    <length>11</length>
    <type>Text</type>
</CustomField>