force-app/main/default/objects/Slack_Channel__c/fields/compliance_new_deal__c.field-meta.xml
<CustomField>
    <fullName>compliance_new_deal__c</fullName>
    <label>compliance-new-deal</label>
    <length>11</length>
    <type>Text</type>
</CustomField>