force-app/main/default/objects/Slack_Channel__c/fields/cps_onboarding__c.field-meta.xml
<CustomField>
    <fullName>cps_onboarding__c</fullName>
    <label>cps-onboarding</label>
    <length>11</length>
    <type>Text</type>
</CustomField>