force-app/main/default/objects/Slack_Channel__c/fields/crm_bd_enrichment_requests__c.field-meta.xml
<CustomField>
    <fullName>crm_bd_enrichment_requests__c</fullName>
    <label>crm-bd-enrichment-requests</label>
    <length>11</length>
    <type>Text</type>
</CustomField>