force-app/main/default/objects/Slack_Channel__c/fields/cs_ticket_alerts__c.field-meta.xml
<CustomField>
    <fullName>cs_ticket_alerts__c</fullName>
    <label>cs-ticket-alerts</label>
    <length>11</length>
    <type>Text</type>
</CustomField>