force-app/main/default/objects/Slack_Channel__c/fields/customer_care_watchlist__c.field-meta.xml
<CustomField>
    <fullName>customer_care_watchlist__c</fullName>
    <label>customer-care-watchlist</label>
    <length>11</length>
    <type>Text</type>
</CustomField>