force-app/main/default/objects/Slack_Channel__c/fields/customer_health_notifications__c.field-meta.xml
<CustomField>
    <fullName>customer_health_notifications__c</fullName>
    <label>customer-health-notifications</label>
    <length>20</length>
    <type>Text</type>
</CustomField>