force-app/main/default/objects/Slack_Channel__c/fields/cybavo_support_triage__c.field-meta.xml
<CustomField>
    <fullName>cybavo_support_triage__c</fullName>
    <label>cybavo-support-triage</label>
    <length>11</length>
    <type>Text</type>
</CustomField>