force-app/main/default/objects/Slack_Channel__c/fields/deal_activity__c.field-meta.xml
<CustomField>
    <fullName>deal_activity__c</fullName>
    <label>deal-activity</label>
    <length>11</length>
    <type>Text</type>
</CustomField>