force-app/main/default/objects/Slack_Channel__c/fields/growth_deal_partner_martketing__c.field-meta.xml
<CustomField>
    <fullName>growth_deal_partner_martketing__c</fullName>
    <label>growth-deal-partner-martketing</label>
    <length>11</length>
    <type>Text</type>
</CustomField>