force-app/main/default/objects/Slack_Channel__c/fields/help_crm__c.field-meta.xml
<CustomField>
    <fullName>help_crm__c</fullName>
    <label>help-crm</label>
    <length>11</length>
    <type>Text</type>
</CustomField>