force-app/main/default/objects/Slack_Channel__c/fields/legal_transactions_team__c.field-meta.xml
<CustomField>
    <fullName>legal_transactions_team__c</fullName>
    <label>legal-transactions-team</label>
    <length>11</length>
    <type>Text</type>
</CustomField>