force-app/main/default/objects/Slack_Channel__c/fields/metronome_alerts__c.field-meta.xml
<CustomField>
    <fullName>metronome_alerts__c</fullName>
    <label>metronome-alerts</label>
    <length>11</length>
    <type>Text</type>
</CustomField>