force-app/main/default/objects/Slack_Channel__c/fields/new_opps_requiring_se_assignment__c.field-meta.xml
<CustomField>
    <fullName>new_opps_requiring_se_assignment__c</fullName>
    <label>new-opps-requiring-se-assignment</label>
    <length>11</length>
    <type>Text</type>
</CustomField>