force-app/main/default/objects/Slack_Channel__c/fields/onramp_newcase_alerts__c.field-meta.xml
<CustomField>
    <fullName>onramp_newcase_alerts__c</fullName>
    <label>onramp_newcase_alerts</label>
    <length>11</length>
    <type>Text</type>
</CustomField>