force-app/main/default/objects/Slack_Channel__c/fields/partner_escalation_approvals__c.field-meta.xml
<CustomField>
    <fullName>partner_escalation_approvals__c</fullName>
    <label>partner-escalation-approvals</label>
    <length>11</length>
    <type>Text</type>
</CustomField>