force-app/main/default/objects/Slack_Channel__c/fields/rev_ops__c.field-meta.xml
<CustomField>
    <fullName>rev_ops__c</fullName>
    <label>rev-ops</label>
    <length>11</length>
    <type>Text</type>
</CustomField>