force-app/main/default/objects/Slack_Channel__c/fields/ring_the_gong__c.field-meta.xml
<CustomField>
    <fullName>ring_the_gong__c</fullName>
    <label>ring-the-gong</label>
    <length>11</length>
    <type>Text</type>
</CustomField>