force-app/main/default/objects/Slack_Channel__c/fields/sales_risk__c.field-meta.xml
<CustomField>
    <fullName>sales_risk__c</fullName>
    <label>sales-risk</label>
    <length>11</length>
    <type>Text</type>
</CustomField>