force-app/main/default/objects/Slack_Channel__c/fields/salesforce_slack_user_notifications__c.field-meta.xml
<CustomField>
    <fullName>salesforce_slack_user_notifications__c</fullName>
    <label>salesforce-slack-user-notifications</label>
    <length>11</length>
    <type>Text</type>
</CustomField>