force-app/main/default/objects/Slack_Channel__c/fields/solution_reviews__c.field-meta.xml
<CustomField>
    <fullName>solution_reviews__c</fullName>
    <label>solution-reviews</label>
    <length>11</length>
    <type>Text</type>
</CustomField>