force-app/main/default/objects/Slack_Channel__c/fields/target_account_circle_mint_approval_requ__c.field-meta.xml
<CustomField>
    <fullName>target_account_circle_mint_approval_requ__c</fullName>
    <label>target-account-circle-mint-approval-requ</label>
    <length>11</length>
    <type>Text</type>
</CustomField>