force-app/main/default/objects/Slack_Channel__c/fields/temp_mint_sg_applications__c.field-meta.xml
<CustomField>
    <fullName>temp_mint_sg_applications__c</fullName>
    <label>temp-mint-sg-applications</label>
    <length>11</length>
    <type>Text</type>
</CustomField>