force-app/main/default/objects/Slack_Channel__c/fields/testslack__c.field-meta.xml
<CustomField>
    <fullName>testslack__c</fullName>
    <label>testslack</label>
    <length>12</length>
    <type>Text</type>
</CustomField>